add more content

--- a/styles/global.css
+++ b/styles/global.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Fira Sans', Arial, sans-serif;
   box-sizing: border-box;
   color: #141414;
+  margin-bottom: 1000px;
 }
 
 h1,h2,h3,p {
