--- a/styles/global.css
+++ b/styles/global.css
@@ -20,3 +20,11 @@ img {
   max-width: 100%;
   display: block;
 }
+
+.subtitulo {
+  font-size: 8rem;
+  line-height: 1;
+  word-break: break-all;
+  text-transform: uppercase;
+  max-width: 4ch;
+}
