--- a/styles/global.css
+++ b/styles/global.css
@@ -1,40 +1,39 @@
 body {
+  font-family: "Fira Sans", Arial, sans-serif;
   margin: 0px;
-  font-family: 'Fira Sans', Arial, sans-serif;
-  box-sizing: border-box;
   color: #141414;
-  margin-bottom: 1000px;
 }
 
-h1,h2,h3,p {
-  margin: 0;
+h1,
+h2,
+h3,
+p {
+  margin: 0px;
 }
 
 ul {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   list-style: none;
 }
 
 img {
   max-width: 100%;
-  height: auto;
   display: block;
 }
 
 .subtitulo {
   font-size: 8rem;
   line-height: 1;
-  word-break: break-all;
   text-transform: uppercase;
+  word-break: break-all;
   max-width: 4ch;
 }
 
-@media (max-width: 800px){
+@media (max-width: 800px) {
   .subtitulo {
     font-size: 3rem;
     text-transform: capitalize;
     max-width: initial !important;
   }
-
 }
