--- a/styles/header.css
+++ b/styles/header.css
@@ -9,8 +9,8 @@
 
 .header-menu {
   display: flex;
-  gap: 10px;
   flex-wrap: wrap;
+  gap: 10px;
   justify-content: center;
 }
 
@@ -22,14 +22,15 @@
   color: #141414;
   display: block;
 }
-@media (max-width: 800px ) {
+
+@media (max-width: 800px) {
   .header {
     flex-direction: column;
     gap: 40px;
     padding: 20px;
   }
   .header a {
-    background-color: #f5f5f5;
+    background: #f5f5f5;
     border-radius: 4px;
   }
 }
